2008-12-13  Bruno Coudoin  <bruno.coudoin@free.fr>

	Removed deprecated menu description in lib/menu/gcompris

	* Makefile.am:
	* gcompris:

2008-11-26  Bruno coudoin  <bruno.coudoin@free.fr>

	Updated the web site generators

	* boards/doubleclick.xml.in:
	* docs/gcompris2spip.pl:
	* docs/spip_oneboard.xsl:

2008-11-24  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/shapegame.c: (item_event_drag): Fixed a crash in case of multiple sound list.
	  This was especially the case in the level 3 of the double entry activity.
          Commit r3628

2008-11-18  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/voices/pa/*: Voices created by Ankit Sahai : ankitsahai85 in g mail
	* src/boards/submarine.c: double crash protection.

2008-11-07  Bruno coudoin  <bruno.coudoin@free.fr>

	Fixes to compile on Ubuntu 8.10

	* src/boards/colors.c: (repeat):
	* src/gcompris/config.c:
	* src/gcompris/gcompris_db.c: (gc_db_get_board_from_id):

	*** RELEASE 8.4.8 ***

2008-10-28  Yavor Doganov  <yavor@gnu.org>  (tiny change)

        * configure.in: Remove the macro AM_ICONV.
        * Makefile.am (install-data-local): Pass --mode 644 to tar and
        make the directories in the destination readable in order to
        support installation from a read-only media.
        (uninstall-local): New target.
        (CONFIG_CLEAN_FILES): Add gcompris-installer.nsi and
        Makefile.mingw.
        * boards/paintings/Makefile.am (CLEANFILES):
        * boards/babymatch/Makefile.am (CLEANFILES):
        * boards/imagename/Makefile.am (CLEANFILES):
        * boards/babyshapes/Makefile.am (CLEANFILES):
        * boards/doubleentry/Makefile.am (CLEANFILES):
        * boards/geography_country/Makefile.am (CLEANFILES):
        * boards/chronos/Makefile.am (CLEANFILES):
        * boards/geography/Makefile.am (CLEANFILES): New variables.
        * docs/eu/Makefile.am (install-data-local):
        * docs/fr/Makefile.am (install-data-local): Comment out the