@@ -4,7 +4,7 @@
 	 name="geography_country"
 	 type="shapegame"
 	 section="/discovery/miscelaneous"
-	 icon="boardicons/globe.svg"
+	 icon="boardicons/france_region.svg"
 	 mandatory_sound_file="voices/$LOCALE/geography/peru.ogg"
 	 difficulty="2"
 	 author="Jean-Philippe Ayanides (jp.ayanides@free.fr)"
